@@ -2,6 +2,7 @@
 
 	* Cleanup in CardMailerTask.php
 	* [!!!] Rename tables
+	* Add table migration script
 
 2016-01-08  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
